--- a/Mesh Loader Task/Mesh Loader Task.csproj
+++ b/Mesh Loader Task/Mesh Loader Task.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contour.cs" />
     <Compile Include="Mesh Loader.cs">
       <SubType>Form</SubType>
     </Compile>
